# Lab1_CrossPlatrofrm_Web_Agent_TOPIT_ELENING_LMS_ABCE_RYBALKA_I_GAYANA_C_LENOY

./: .gitignore  CMakeLists.txt  HTTP_client.cpp  README.md  config.json  consoletab.cpp  consoletable.h  json_functions.cpp  keychain.json  logger.cpp  main.cpp  Отчёт по работе.docx
RELEASES/: WebAgent.out
include/: agent.h  utils.h
src/: agent.cpp  main.cpp  utils.cpp
